--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ Application/valued-visitor-455102-k2-900aa6156db6.json
 Cache/
 bert_classifier_2.pth
 .env
+*.env
 __pycache__/
+Application/routes.pyc
